==========================
NEWS:
    - 依赖于gio-2.32+
    - api版本升级为3.0
    - 使用gresource来保存自带的节日信息。
    - 增加新的自定义节日函数:
    lunar_date_add_solar_holiday
    lunar_date_add_lunar_holiday
    lunar_date_add_week_holiday
    - 使用新的获取节日函数: lunar_date_get_holiday，同时lunar_date_get_jieri被标记为放弃．
    - 删除已经过时的函数: lunar_init．
    - 修复examples中的vala示例代码.
    - 修复干支和八字中的子时的计算问题．
    - 增加dbus service服务。

======================
lunar-date-2.4.0
======================
NEWS:
    - 修改名称为lunar-date，和lunar-calendar分离。
    - 一些小bug的修复。

==============
liblunar-2.2.5
==============
NEWS:
    - 增加本地自定义节日的支持。
    - 一些小bug的修复。

==============
liblunar-2.2.4
==============
NEWS:
    - 一些小bug的修复。

==============
liblunar-2.2.3
==============
NEWS:
    - 清理共享库的导出符号列表。

==============
liblunar-2.2.1
==============
NEWS:
    - change lunar_date_get_jieri() api.

==============
liblunar-2.2.0
==============
NEWS:
    - remove the gtk+ widget from liblunar.
    - add python binding for liblunar.

==============
liblunar-2.0.1
==============
NEWS:
    - fixed detect python error.

==============
liblunar-2.0.0
==============
NEWS:
    - fixed some bugs.
    - add zh_TW, zh_HK translate.

==============
liblunar-1.0.1
==============
NEWS:
    - Change struct name from "LUNARDate" to "LunarDate";
    - add -disable-gtk for compile.
    - add pot file when make dist. see #4.
    this release just for translation.

==============
liblunar-1.0.0
==============
NEWS:
    - support solar term (by redwoods <redwooods@gmail.com>).
    - modify some festivals.
    - keep Sunday as the first day of a week.
    - update Calendar to GTK+-2.12.8
    - show lunar automatic.
    - fixed: 
        * when year less-than 1900 or greater than 2049, calendar will show error lunar.
        * when we view 1900 Jan, the calendar will crash.

==============
liblunar-0.2.6
==============
NEWS:
    - use pinyin on "C" locale. But only in UTF-8.

==============
liblunar-0.2.5
==============
NEWS: